Replace h2database with mysql